--- a/docs/_sass/rain/_base.scss
+++ b/docs/_sass/rain/_base.scss
@@ -5,13 +5,14 @@
 
 html,
 body {
-  color: $default-color;
+  // color: $default-color;
   margin: 0;
   padding: 0;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
 }
 
 html {
-  font-family: $sans-serif;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
   font-size: 14px;
   overflow-y: scroll;
 
@@ -31,7 +32,7 @@ h4,
 h5,
 h6 {
   color: $default-shade;
-  font-family: $sans-serif;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
   line-height: normal;
 }
 
