--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -23,4 +23,5 @@
   <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/apple-touch-icon.png" | relative_url }}"> -->
 
   <!-- RSS -->
+  {% feed_meta %}
 </head>
