edit: modify some configs for multi languages

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,6 +10,7 @@
           <h2 class="nav-title">{{ site.title }}</h2>
         </a>
         <ul class="nav-social-icons">
+          <!-- <li><a target="_blank" href="">中/英</a></li> -->
           {% if site.social.email %}
             <li><a target="_blank" href="mailto:{{ site.social.email }}"><i class="fas fa-envelope"></i></a></li>
           {% endif %}
