fix: forward layout no GA4

--- a/docs/_layouts/forward.html
+++ b/docs/_layouts/forward.html
@@ -1,4 +1,6 @@
+<!-- don't use head to avoid seeing visible header -->
 <html lang="en">
+    {% include head.html %}
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="refresh" content="0;url={{ page.target }}"/>
