--- a/docs/_sass/rain/_base.scss
+++ b/docs/_sass/rain/_base.scss
@@ -65,3 +65,20 @@ img {
 td {
   vertical-align: top;
 }
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 20px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  overflow: auto;
+  z-index: 999; // always on the top
+}
+
+.dropdown-menu a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
