--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,38 +1,61 @@
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-09LKS0TS2K"></script>
+<script
+  async
+  src="https://www.googletagmanager.com/gtag/js?id=G-09LKS0TS2K"
+></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag("js", new Date());
 
-  gtag('config', 'G-09LKS0TS2K');
+  gtag("config", "G-09LKS0TS2K");
 </script>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   {% if page.title == "Home" %}
-    <meta name="description" content="{{ site.description }}">
+  <meta name="description" content="{{ site.description }}" />
   {% endif %}
 
   <title>
-    {% if page.title == "Home" %}
-      {{ site.title }}
-    {% else %}
-      {{ page.title }} &middot; {{ site.title }}
-    {% endif %}
+    {% if page.url contains "/en" %} {{ site.title-en }} {% elsif page.url
+    contains "/jp" %} {{ site.title-jp }} {% else %} {{ site.title }} {% endif
+    %} <!-- {% if page.title == "Home" %} {{ site.title }} {% else %} {{
+    page.title }} &middot; {{ site.title }} {% endif %} -->
   </title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous"
+  />
 
   <!-- Favicon -->
   <!-- https://favicon.io/emoji-favicons/world-map/ -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
-  <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="/assets/favicon_io/apple-touch-icon.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="/assets/favicon_io/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="/assets/favicon_io/favicon-16x16.png"
+  />
+  <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
 
   <!-- RSS -->
   {% feed_meta %}
